Fixed the error handlers in express and React
included:
- show 404 page and retain the url requested
- fix 404 page layout (not centered)

Not included:
- redirect according to capabilities

Jira: WLP-566

--- a/public/scss/layouts/_default.scss
+++ b/public/scss/layouts/_default.scss
@@ -13,6 +13,7 @@ body {
 
 .public-container {
   height: 100%;
+  margin-top: -$topbar-height;
   display: flex;
   align-items: center;
   overflow: hidden;
